--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     <link rel="shortcut icon" href="https://tiendamia.com/skin/frontend/traigo/traigo/favicon_2019.ico" type="image/x-icon">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Tiendamia</title>
-    <base href="/"/>
+    <base href="/react-tiendamia/"/>
   </head>
   <body>
     <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
+    <script type="module" src="/react-tiendamia/src/main.tsx"></script>
   </body>
 </html>
