--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="shortcut icon" href="https://tiendamia.com/skin/frontend/traigo/traigo/favicon_2019.ico" type="image/x-icon">
+    <script src="https://kit.fontawesome.com/102897330d.js" crossorigin="anonymous"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Tiendamia</title>
   </head>
